# dagpi-image

./: .dockerignore  .flake8  .gitignore  .imgbotconfig  Dockerfile  LICENSE  README.md  alpine-Dockerfile  dagpi-image.env  docker-compose.yml  gunicorn_conf.py  prod.requirements.txt  pyproject.toml  requirements.txt  start.sh
.github/workflows/: docker-push.yml  linting.yml  sentry.yml
app/: __init__.py  __main__.py  app.py  executor.py
app/exceptions/: errors.py
app/image/: NumpyManip.py  PILManip.py  PolaroidManip.py  WandManip.py  decorators.py  neon.py  numpy_manip.py  pil_manipulation.py  polaroid_manip.py  retro_meme.py  special_manip.py  text_images.py  wand_manipulation.py  writetext.py  z03h_neon.py
app/image/assets/: a.py  pokemons.json
app/middleware/: __init__.py  auth.py  timer.py
app/routes/: image_routes.py  responses.py  special_routes.py
app/utils/: client.py
website/: __init__.py  website.py
