[tool.poetry]
name = "dagpi-image"
version = "1.5.0"
description = ""
authors = ["Daggy1234 <arnav.jindal7@gmail.com>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
Wand = "0.6.6"
httptools = "0.1.1"
async-timeout = "3.0.1"
httpx = "^0.18.2"
starlette-prometheus = "0.7.0"
sentry-sdk = "^1.1.0"
scipy = "1.6.3"
Pillow = "^8.2.0"
uvicorn = "0.13.4"
fastapi = "^0.65.2"
matplotlib = "3.4.2"
scikit-image = "^0.18.1"
numpy = "1.20.1"
gunicorn = "^20.1.0"
polaroid = "^0.3.2"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
flake8 = "^3.9.2"

[tool.pyright]

[tool.yapf]
based_on_style = "pep8"

[tool.poetry.scripts]
dev = 'app'



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
