[tool.poetry]
name = "dagpi-image"
version = "1.5.0"
description = ""
authors = ["Daggy1234 <arnav.jindal7@gmail.com>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
Wand = "0.6.6"
httptools = "0.3.0"
async-timeout = "4.0.1"
httpx = "^0.21.1"
starlette-prometheus = "0.8.0"
sentry-sdk = "^1.5.0"
scipy = "1.7.3"
Pillow = "^8.4.0"
uvicorn = "0.15.0"
fastapi = "^0.70.0"
matplotlib = "3.5.0"
scikit-image = "^0.18.3"
numpy = "1.21.4"
gunicorn = "^20.1.0"
polaroid = "^0.3.2"
glitch-this = "^1.0.2"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
flake8 = "^3.9.2"
toml = "^0.10.2"

[tool.pyright]

[tool.yapf]
based_on_style = "pep8"

[tool.poetry.scripts]
dev = 'app'



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
